# primo-optimizer

./: .addheader.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT.md  LICENSE.md  README.md  codecov.yml  conda-env-dev.yml  conda-env.yml  environment.yml  file_header.txt  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py  stagedfright.py
.github/: CODEOWNERS  wordlist.txt
.github/workflows/: binder.yml  checks.yml  demo.yml  lint.py  linter.yml  primo_reporters.py  publish_pypi.yml  version_check.py
.stagedfright/: README.md  checks.py
docs/: Dockerfile  Makefile  binder.rst  conf.py  copyright.rst  documentation.rst  example.rst  faq.rst  index.rst  install.rst  license.rst  make.bat  quickstart.rst  workflow.rst
docs/Utilities/: census_utils.rst  config_utils.rst  demo_utils.rst  download_utils.rst  elevation_utils.rst  estimation_utils.rst  geo_utils.rst  kpi_utils.rst  map_utils.rst  modules.rst  multiple_scenario_util.rst  opt_utils.rst  proximity_utils.rst  raise_exception.rst  setup_arg_parser.rst  setup_logger.rst
docs/_templates/: custom-class-template.rst
docs/method/: api_keys.rst  clustering.rst  config_file.rst  efficiency_score_calculation.rst  elevation.rst  index.rst  primo_input.rst  priority_score_calculation.rst
docs/model_library/: index.rst
primo/: __init__.py
primo/data_parser/: __init__.py  data_model.py  default_data.py  input_config.py  input_parser.py  metric_data.py  well_data.py  well_data_column_names.py  well_data_columns.py
primo/data_parser/tests/: random_well_data.csv  random_well_data_common.csv  test_metric_data.py  test_well_data.py  test_well_data_column_names.py  test_well_data_columns.py  test_well_data_common_methods.py
primo/demo/: Example_1_data.csv  Example_1_top_wells_gas.csv  Example_1_top_wells_oil.csv  PRIMO - Example_1.ipynb  config_Example_1.json
primo/demo/Example_1_input/: Hospitals_example.csv  Input_example.xlsx  Primo_projects.xlsx  Schools_example.csv
primo/demo/tests/: __init__.py  test_demo.py
primo/opt_model/: __init__.py  base_model.py  efficiency_block.py  efficiency_max_formulation.py  model_options.py  model_with_clustering.py  opt_model.py  result_parser.py
primo/opt_model/tests/: __init__.py  opt_toy_model.csv  test_base_model.py  test_efficiency_block.py  test_model_options.py  test_opt_model.py  test_result_parser.py
primo/utils/: __init__.py  census_utils.py  clustering.py  clustering_utils.py  config_utils.py  demo_utils.py  domain_validators.py  download_utils.py  elevation_utils.py  estimation_utils.py  geo_utils.py  kpi_utils.py  map_utils.py  multiple_scenario_util.py  opt_utils.py  override_utils.py  project_information_utils.py  proximity_utils.py  raise_exception.py  setup_arg_parser.py  setup_logger.py  solvers.py
primo/utils/tests/: __init__.py  config_test.json  identifiers.csv  test_census_utils.py  test_clustering_utils.py  test_config_utils.py  test_demo_utils.py  test_domain_validators.py  test_elevation_utils.py  test_estimation_utils.py  test_geo_utils.py  test_headers.py  test_imports.py  test_kpi_utils.py  test_logger.py  test_map_utils.py  test_opt_utils.py  test_override_utils.py  test_project_information_utils.py  test_proximity_utils.py  (+3 more)
